--- a/Project.toml
+++ b/Project.toml
@@ -2,5 +2,6 @@
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 MethodAnalysis = "85b6ec6f-f7df-4429-9514-a64bcd9ee824"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
