--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -1,23 +1,26 @@
 
 NUMBER_OF_EXPERIMENTS_PER_ALGORITHM: 100
 
-NUMBER_OF_ITERATIONS_PER_EXPERIMENT: 10
+NUMBER_OF_ITERATIONS_PER_EXPERIMENT: 10000
 
 SEED: 42
 
 A:  
-  - Dist: Beta
-    Params: [0.15, 0.7]
+  - Dist: Normal
+    Params: [0.4, 0.5]
   
-  - Dist: Beta
-    Params: [0.54,0.2]
+  - Dist: Normal
+    Params: [0.5, 0.3]
 
-  - Dist: Beta
-    Params: [0.38, 0.5]
+  - Dist: Normal
+    Params: [0.5, 0.5]
+
+  - Dist: Normal
+    Params: [0.5, 0.7]
 
 ξ:
   - Dist: Categorical
-    Params: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]
+    Params: 4
 
 PlotSeriesOverTime:
   - MABField: regret_fixed
