--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -25,13 +25,16 @@ A:
 PlotSeriesOverTime:
   - MABField: regret_fixed
     FileName: "ExperimentOutputs/plot_of_regret_over_time"
+    DisplayPlot: false
 
   - MABField: γ  
     FileName: "ExperimentOutputs/plot_of_action_over_time"
+    DisplayPlot: true
 
 PlotSeriesHistogram:
   - MABField: γ  
     FileName: "ExperimentOutputs/plot_of_action_histogram"
+    DisplayPlot: true
 
 Algorithms: ["ExponentiatedGradient", "FtrlExponentiatedGradient", "EXP3", "ExploreThenCommit", "UpperConfidenceBound", "EpsilonGreedy", "LinearDecayedEpsilonGreedy", "ExpDecayedEpsilonGreedy", "Hedge"]
 
